@@ -28,8 +28,9 @@ public:
     explicit ProxyStyle();
 
     int styleHint(StyleHint hint, const QStyleOption* option = 0, const QWidget* widget = 0, QStyleHintReturn* returnData = 0) const;
-
     int pixelMetric(PixelMetric metric, const QStyleOption* option, const QWidget* widget) const;
+
+    QString name() const;
 
 private:
     mutable int m_TabBarTabHSpace;
